# BitChess

./: CMakeLists.txt  README.md
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  chess_rl.cpp  chess_rl.h  engine.cpp  engine.h  feature_extractor.cpp  feature_extractor.h  main.cpp  movegen.cpp  movegen.h  neural_network.cpp  neural_network.h  train_rl.cpp  uci.cpp  uci.h
test/: test_bitboard.cpp  test_board.cpp  test_chess_rl.cpp  test_neural_network.cpp
